[package]
name = "fil_actor_bundler"
description = "An IPLD CAR bundling tool for Wasm bytecode"
version = "4.1.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors-bundler"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
fvm_ipld_car = "0.6.0"
cid = { version = "0.8.5", default-features = false, features = ["serde-codec"] }
async-std = "1.11.0"
futures = "0.3.21"
anyhow = "1.0.56"
serde_ipld_dagcbor = "0.2.2"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"
num-traits = "0.2.14"
